// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Mistakes With one count 1`] = `
<div
  className="game__mistakes"
>
  <div
    className="wrong"
  />
</div>
`;

exports[`Should render Mistakes With zero count 1`] = `
<div
  className="game__mistakes"
/>
`;
